<resources>
    <string name="app_name">KulturniSpomenici</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm password</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="lastName">Last name</string>
    <string name="phone">Phone</string>
    <string name="dateOfBirth">Date of birth</string>
    <string name="marginTop">50</string>
    <string name="loading">loading</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="full_name">Full name</string>
    <string name="date">Date</string>
    <string name="potvrdi_lozinku">Kako bi ste obrisali profil morate prvo potvrditi vasu lozinku</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>