<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/loading"
    tools:context=".Activitys.UserProfileActivity"
    android:background="@color/lightGrat">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:background="@color/PrimaryColor">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="635dp"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:background="@color/PrimaryColor">

                <ImageView
                    android:id="@+id/UploadProfilePicture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_centerInParent="true"
                    android:src="@drawable/no_profile_picture" />

                <TextView
                    android:id="@+id/txtEditProfilePicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/UploadProfilePicture"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="27dp"
                    android:gravity="center"
                    android:text="@string/edit_profile_picture"
                    android:textColor="@color/linkBlue"
                    android:textSize="15sp"/>


            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/smallUserImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/outline_account_circle_black_24dp" />


                <TextView
                    android:id="@+id/Name"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@id/smallUserImage"
                    android:layout_marginStart="50dp"
                    android:text="@string/full_name"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/etName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Name"
                    android:layout_marginStart="50dp"
                    android:minHeight="48dp"
                    android:hint="@string/full_name"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/smallUsernameImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/outline_face_5_black_24dp" />

                <ProgressBar
                    android:id="@+id/ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/Username"
                    android:layout_alignEnd="@+id/Username"
                    android:layout_marginStart="102dp"
                    android:layout_marginEnd="152dp"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/Username"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@id/smallUsernameImage"
                    android:layout_marginStart="50dp"
                    android:hint="@string/username"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/etUsername"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Username"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:minHeight="48dp"
                    android:hint="@string/username"
                    android:textColor="@color/black"/>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/smallPhoneImage"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/outline_contact_phone_black_24dp"/>


                <TextView
                    android:id="@+id/Phone"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@id/smallPhoneImage"
                    android:layout_marginStart="50dp"
                    android:hint="@string/phone"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/etPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Phone"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:minHeight="48dp"
                    android:hint="@string/phone"
                    android:textColor="@color/black"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="15dp"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/smallDateImageee"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@drawable/outline_date_range_black_24dp" />


                <TextView
                    android:id="@+id/Date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@id/smallDateImageee"
                    android:layout_marginStart="50dp"
                    android:focusable="false"
                    android:hint="@string/dateOfBirth"
                    android:textColor="@color/black"/>

                <EditText
                    android:id="@+id/etDateOB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/Date"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="50dp"
                    android:minHeight="48dp"
                    android:focusable="false"
                    android:hint="@string/dateOfBirth"
                    android:textColor="@color/black"/>
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>